--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "conexão-inhambupe",
+  "name": "akiten",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,7 +12,8 @@
     "react": "^19.2.3",
     "lucide-react": "^0.562.0",
     "react-dom": "^19.2.3",
-    "react-router-dom": "^7.11.0"
+    "react-router-dom": "^7.11.0",
+    "firebase": "^12.7.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
